# agent-threatcards

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: baseline.md  design.md  rules.md
examples/: risky-mcp.json
src/agent_threatcards/: __init__.py  __main__.py  bootstrap.py  rules.py  scanner.py
tests/: test_scanner.py
